Шерлоком: работает все, кроме отображения ответа

--- a/SherlockApp/src/main/AndroidManifest.xml
+++ b/SherlockApp/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="org.holoeverywhere.app.Application"
     package="com.example.sherlock.sherlockapp" >
 
     <application
@@ -15,6 +16,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".IdentityPerson"
+            android:label="@string/title_activity_identity_person"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.sherlock.sherlockapp.MainActivity" />
         </activity>
     </application>
 
